# behavior-based-security-system

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
auth/: __init__.py  login.py  signup.py
behavior/: __init__.py  anomaly.py  capture.py  profile.py
database/: __init__.py  db.py  models.py
docs-site/: index.html  script.js  styles.css
logs/: __init__.py  audit.py  logger.py
ml/: __init__.py  model.py  trainer.py
security/: response.py  risk.py
src/bbss/: __init__.py  config.py
src/bbss/auth/: __init__.py  hashing.py  login.py  signup.py
src/bbss/behavior/: __init__.py  anomaly.py  capture.py  profile.py
src/bbss/database/: __init__.py  db.py  models.py
src/bbss/logs/: __init__.py  audit.py  logger.py
src/bbss/ml/: __init__.py  features.py  model.py  trainer.py
src/bbss/security/: __init__.py  response.py  risk.py
src/bbss/utils/: __init__.py
tests/: conftest.py  test_anomaly.py  test_auth.py  test_behavior.py  test_logging.py  test_ml.py  test_response.py  test_risk.py
tests/ml/models/: user_998.pkl
utils/: __init__.py  helpers.py
